<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pleno"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtetlaFragment">

    <EditText
        android:id="@+id/etAcademia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/academia"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/etBairro"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/etBairro"
        app:layout_constraintTop_toBottomOf="@+id/etBairro" />

    <EditText
        android:id="@+id/etRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/record"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAcademia" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDtaNasc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/dataNasc"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/etNome"
        app:layout_constraintTop_toBottomOf="@+id/etNome" />

    <EditText
        android:id="@+id/etBairro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/etDtaNasc"
        app:layout_constraintTop_toBottomOf="@+id/etDtaNasc" />

    <Button
        android:id="@+id/btnCadastraPleno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/cadastrar"
        app:layout_constraintEnd_toEndOf="@+id/etRecord"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/etRecord"
        app:layout_constraintTop_toBottomOf="@+id/etRecord" />

</androidx.constraintlayout.widget.ConstraintLayout>