<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/senior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtetlaSeniorFragment" >

    <EditText
        android:id="@+id/etNomeS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDataNascS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/dataNasc"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/etNomeS"
        app:layout_constraintTop_toBottomOf="@+id/etNomeS" />

    <EditText
        android:id="@+id/etBairroS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/etDataNascS"
        app:layout_constraintTop_toBottomOf="@+id/etDataNascS" />

    <CheckBox
        android:id="@+id/cbCardiaco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/cardiaco"
        app:layout_constraintEnd_toEndOf="@+id/etBairroS"
        app:layout_constraintStart_toStartOf="@+id/etBairroS"
        app:layout_constraintTop_toBottomOf="@+id/etBairroS" />

    <Button
        android:id="@+id/btnCadastraSenior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/cadastrar"
        app:layout_constraintEnd_toEndOf="@+id/cbCardiaco"
        app:layout_constraintStart_toStartOf="@+id/cbCardiaco"
        app:layout_constraintTop_toBottomOf="@+id/cbCardiaco" />

</androidx.constraintlayout.widget.ConstraintLayout>