<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/junior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtetlaJuniorFragment" >

    <EditText
        android:id="@+id/etNomeAJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDataNascAJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/dataNasc"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/etNomeAJ"
        app:layout_constraintTop_toBottomOf="@+id/etNomeAJ" />

    <EditText
        android:id="@+id/etBairroAJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/etDataNascAJ"
        app:layout_constraintTop_toBottomOf="@+id/etDataNascAJ" />

    <EditText
        android:id="@+id/etAno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/anosPatrica"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/etBairroAJ"
        app:layout_constraintTop_toBottomOf="@+id/etBairroAJ" />

    <Button
        android:id="@+id/btnCadastraJunior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/cadastrar"
        app:layout_constraintEnd_toEndOf="@+id/etAno"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/etAno"
        app:layout_constraintTop_toBottomOf="@+id/etAno" />
</androidx.constraintlayout.widget.ConstraintLayout>